--- a/voice-bot/requirements.txt
+++ b/voice-bot/requirements.txt
@@ -1,109 +1,395 @@
 aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
+aiohttp-retry==2.9.1
 aiosignal==1.3.2
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.1
+asttokens==3.0.0
+async-lru==2.0.4
 async-timeout==4.0.3
 attrs==25.1.0
-blinker==1.8.2
-CacheControl==0.14.0
-cachetools==5.5.0
-certifi==2024.8.30
+babel==2.17.0
+backoff==2.2.1
+bcrypt==4.2.1
+beautifulsoup4==4.13.3
+bleach==6.2.0
+blinker==1.9.0
+build==1.2.2.post1
+cachetools==5.5.1
+certifi==2025.1.31
 cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
-cryptography==43.0.3
+charset-normalizer==3.4.1
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
+click==8.1.8
+coloredlogs==15.0.1
+comm==0.2.2
 dataclasses-json==0.6.7
-distlib==0.3.9
+debugpy==1.8.12
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.18
 distro==1.9.0
-dnspython==2.7.0
+durationpy==0.9
+edge-tts==7.0.0
 exceptiongroup==1.2.2
+executing==2.2.0
 fastapi==0.115.8
-filelock==3.16.1
-firebase==4.0.1
-firebase-admin==6.5.0
-Flask==3.0.3
+fastjsonschema==2.21.1
+filelock==3.17.0
+Flask==3.1.0
+Flask-Cors==5.0.0
+flatbuffers==25.2.10
+fqdn==1.5.1
 frozenlist==1.5.0
 fsspec==2025.2.0
-google-api-core==2.21.0
-google-api-python-client==2.149.0
-google-auth==2.35.0
-google-auth-httplib2==0.2.0
-google-cloud-core==2.4.1
-google-cloud-firestore==2.19.0
-google-cloud-storage==2.18.2
-google-crc32c==1.6.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.65.0
-grpcio==1.67.0
-grpcio-status==1.67.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.38.0
+googleapis-common-protos==1.67.0
+grpcio==1.70.0
+gTTS==2.5.4
 h11==0.14.0
 httpcore==1.0.7
-httplib2==0.22.0
+httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.28.1
+humanfriendly==10.0
 idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.5.2
+ipykernel==6.29.5
+ipython==8.32.0
+ipywidgets==8.1.5
+isoduration==20.11.0
 itsdangerous==2.2.0
-Jinja2==3.1.4
+jedi==0.19.2
+Jinja2==3.1.5
 jiter==0.8.2
+joblib==1.4.2
+json5==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+kubernetes==32.0.0
 langchain==0.3.18
+langchain-chroma==0.2.2
 langchain-community==0.3.17
 langchain-core==0.3.35
+langchain-huggingface==0.1.2
 langchain-mistralai==0.2.6
-langchain-ollama==0.2.3
 langchain-openai==0.3.5
 langchain-text-splitters==0.3.6
 langchain-tools==0.1.34
-langsmith==0.3.3
+langsmith==0.3.8
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
-msgpack==1.1.0
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.1.1
+mmh3==5.1.0
+monotonic==1.6
+mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
+narwhals==1.26.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+notebook==7.3.2
+notebook_shim==0.2.4
 numpy==1.26.4
-ollama==0.4.7
+oauthlib==3.2.2
+onnxruntime==1.20.1
 openai==1.62.0
+opentelemetry-api==1.30.0
+opentelemetry-exporter-otlp-proto-common==1.30.0
+opentelemetry-exporter-otlp-proto-grpc==1.30.0
+opentelemetry-instrumentation==0.51b0
+opentelemetry-instrumentation-asgi==0.51b0
+opentelemetry-instrumentation-fastapi==0.51b0
+opentelemetry-proto==1.30.0
+opentelemetry-sdk==1.30.0
+opentelemetry-semantic-conventions==0.51b0
+opentelemetry-util-http==0.51b0
 orjson==3.10.15
+overrides==7.7.0
 packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.1.0
 platformdirs==4.3.6
+playsound==1.3.0
+posthog==3.13.0
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
 propcache==0.2.1
-proto-plus==1.25.0
-protobuf==5.28.3
+protobuf==5.29.3
+psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==19.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
-pybase64==1.4.0
+PyAudio==0.2.14
 pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
-PyJWT==2.9.0
-pymongo==4.11
-pyparsing==3.2.0
+pydeck==0.9.1
+pydub==0.25.1
+Pygments==2.19.1
+PyJWT==2.10.1
+pyobjc==11.0
+pyobjc-core==11.0
+pyobjc-framework-Accessibility==11.0
+pyobjc-framework-Accounts==11.0
+pyobjc-framework-AddressBook==11.0
+pyobjc-framework-AdServices==11.0
+pyobjc-framework-AdSupport==11.0
+pyobjc-framework-AppleScriptKit==11.0
+pyobjc-framework-AppleScriptObjC==11.0
+pyobjc-framework-ApplicationServices==11.0
+pyobjc-framework-AppTrackingTransparency==11.0
+pyobjc-framework-AudioVideoBridging==11.0
+pyobjc-framework-AuthenticationServices==11.0
+pyobjc-framework-AutomaticAssessmentConfiguration==11.0
+pyobjc-framework-Automator==11.0
+pyobjc-framework-AVFoundation==11.0
+pyobjc-framework-AVKit==11.0
+pyobjc-framework-AVRouting==11.0
+pyobjc-framework-BackgroundAssets==11.0
+pyobjc-framework-BrowserEngineKit==11.0
+pyobjc-framework-BusinessChat==11.0
+pyobjc-framework-CalendarStore==11.0
+pyobjc-framework-CallKit==11.0
+pyobjc-framework-Carbon==11.0
+pyobjc-framework-CFNetwork==11.0
+pyobjc-framework-Cinematic==11.0
+pyobjc-framework-ClassKit==11.0
+pyobjc-framework-CloudKit==11.0
+pyobjc-framework-Cocoa==11.0
+pyobjc-framework-Collaboration==11.0
+pyobjc-framework-ColorSync==11.0
+pyobjc-framework-Contacts==11.0
+pyobjc-framework-ContactsUI==11.0
+pyobjc-framework-CoreAudio==11.0
+pyobjc-framework-CoreAudioKit==11.0
+pyobjc-framework-CoreBluetooth==11.0
+pyobjc-framework-CoreData==11.0
+pyobjc-framework-CoreHaptics==11.0
+pyobjc-framework-CoreLocation==11.0
+pyobjc-framework-CoreMedia==11.0
+pyobjc-framework-CoreMediaIO==11.0
+pyobjc-framework-CoreMIDI==11.0
+pyobjc-framework-CoreML==11.0
+pyobjc-framework-CoreMotion==11.0
+pyobjc-framework-CoreServices==11.0
+pyobjc-framework-CoreSpotlight==11.0
+pyobjc-framework-CoreText==11.0
+pyobjc-framework-CoreWLAN==11.0
+pyobjc-framework-CryptoTokenKit==11.0
+pyobjc-framework-DataDetection==11.0
+pyobjc-framework-DeviceCheck==11.0
+pyobjc-framework-DictionaryServices==11.0
+pyobjc-framework-DiscRecording==11.0
+pyobjc-framework-DiscRecordingUI==11.0
+pyobjc-framework-DiskArbitration==11.0
+pyobjc-framework-DVDPlayback==11.0
+pyobjc-framework-EventKit==11.0
+pyobjc-framework-ExceptionHandling==11.0
+pyobjc-framework-ExecutionPolicy==11.0
+pyobjc-framework-ExtensionKit==11.0
+pyobjc-framework-ExternalAccessory==11.0
+pyobjc-framework-FileProvider==11.0
+pyobjc-framework-FileProviderUI==11.0
+pyobjc-framework-FinderSync==11.0
+pyobjc-framework-FSEvents==11.0
+pyobjc-framework-GameCenter==11.0
+pyobjc-framework-GameController==11.0
+pyobjc-framework-GameKit==11.0
+pyobjc-framework-GameplayKit==11.0
+pyobjc-framework-HealthKit==11.0
+pyobjc-framework-ImageCaptureCore==11.0
+pyobjc-framework-InputMethodKit==11.0
+pyobjc-framework-InstallerPlugins==11.0
+pyobjc-framework-InstantMessage==11.0
+pyobjc-framework-Intents==11.0
+pyobjc-framework-IntentsUI==11.0
+pyobjc-framework-IOBluetooth==11.0
+pyobjc-framework-IOBluetoothUI==11.0
+pyobjc-framework-IOSurface==11.0
+pyobjc-framework-iTunesLibrary==11.0
+pyobjc-framework-KernelManagement==11.0
+pyobjc-framework-LatentSemanticMapping==11.0
+pyobjc-framework-LaunchServices==11.0
+pyobjc-framework-libdispatch==11.0
+pyobjc-framework-libxpc==11.0
+pyobjc-framework-LinkPresentation==11.0
+pyobjc-framework-LocalAuthentication==11.0
+pyobjc-framework-LocalAuthenticationEmbeddedUI==11.0
+pyobjc-framework-MailKit==11.0
+pyobjc-framework-MapKit==11.0
+pyobjc-framework-MediaAccessibility==11.0
+pyobjc-framework-MediaLibrary==11.0
+pyobjc-framework-MediaPlayer==11.0
+pyobjc-framework-MediaToolbox==11.0
+pyobjc-framework-Metal==11.0
+pyobjc-framework-MetalFX==11.0
+pyobjc-framework-MetalKit==11.0
+pyobjc-framework-MetalPerformanceShaders==11.0
+pyobjc-framework-MetalPerformanceShadersGraph==11.0
+pyobjc-framework-MetricKit==11.0
+pyobjc-framework-MLCompute==11.0
+pyobjc-framework-ModelIO==11.0
+pyobjc-framework-MultipeerConnectivity==11.0
+pyobjc-framework-NaturalLanguage==11.0
+pyobjc-framework-NetFS==11.0
+pyobjc-framework-Network==11.0
+pyobjc-framework-NetworkExtension==11.0
+pyobjc-framework-NotificationCenter==11.0
+pyobjc-framework-OpenDirectory==11.0
+pyobjc-framework-OSAKit==11.0
+pyobjc-framework-OSLog==11.0
+pyobjc-framework-PassKit==11.0
+pyobjc-framework-PencilKit==11.0
+pyobjc-framework-PHASE==11.0
+pyobjc-framework-Photos==11.0
+pyobjc-framework-PhotosUI==11.0
+pyobjc-framework-PreferencePanes==11.0
+pyobjc-framework-PushKit==11.0
+pyobjc-framework-Quartz==11.0
+pyobjc-framework-QuickLookThumbnailing==11.0
+pyobjc-framework-ReplayKit==11.0
+pyobjc-framework-SafariServices==11.0
+pyobjc-framework-SafetyKit==11.0
+pyobjc-framework-SceneKit==11.0
+pyobjc-framework-ScreenCaptureKit==11.0
+pyobjc-framework-ScreenSaver==11.0
+pyobjc-framework-ScreenTime==11.0
+pyobjc-framework-ScriptingBridge==11.0
+pyobjc-framework-SearchKit==11.0
+pyobjc-framework-Security==11.0
+pyobjc-framework-SecurityFoundation==11.0
+pyobjc-framework-SecurityInterface==11.0
+pyobjc-framework-SensitiveContentAnalysis==11.0
+pyobjc-framework-ServiceManagement==11.0
+pyobjc-framework-SharedWithYou==11.0
+pyobjc-framework-SharedWithYouCore==11.0
+pyobjc-framework-ShazamKit==11.0
+pyobjc-framework-Social==11.0
+pyobjc-framework-SoundAnalysis==11.0
+pyobjc-framework-Speech==11.0
+pyobjc-framework-SpriteKit==11.0
+pyobjc-framework-StoreKit==11.0
+pyobjc-framework-Symbols==11.0
+pyobjc-framework-SyncServices==11.0
+pyobjc-framework-SystemConfiguration==11.0
+pyobjc-framework-SystemExtensions==11.0
+pyobjc-framework-ThreadNetwork==11.0
+pyobjc-framework-UniformTypeIdentifiers==11.0
+pyobjc-framework-UserNotifications==11.0
+pyobjc-framework-UserNotificationsUI==11.0
+pyobjc-framework-VideoSubscriberAccount==11.0
+pyobjc-framework-VideoToolbox==11.0
+pyobjc-framework-Virtualization==11.0
+pyobjc-framework-Vision==11.0
+pyobjc-framework-WebKit==11.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-json-logger==3.2.1
+pyttsx3==2.98
 pytz==2025.1
 PyYAML==6.0.2
+pyzmq==26.2.1
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.4
+rpds-py==0.22.3
 rsa==4.9
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
+Send2Trash==1.8.3
+sentence-transformers==3.4.1
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
+soupsieve==2.6
 SpeechRecognition==3.14.1
 SQLAlchemy==2.0.38
+srt==3.5.3
+stack-data==0.6.3
 starlette==0.45.3
+streamlit==1.42.0
+sympy==1.13.1
+tabulate==0.9.0
 tenacity==9.0.0
+terminado==0.18.1
+threadpoolctl==3.5.0
 tiktoken==0.8.0
+tinycss2==1.4.0
 tokenizers==0.21.0
+toml==0.10.2
+tomli==2.2.1
+torch==2.6.0
+torchaudio==2.6.0
+tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.48.3
+twilio==9.4.5
+typer==0.15.1
+types-python-dateutil==2.9.0.20241206
 typing-inspect==0.9.0
 typing_extensions==4.12.2
-uritemplate==4.1.1
-urllib3==2.2.3
+tzdata==2025.1
+uri-template==1.3.0
+urllib3==2.3.0
 uvicorn==0.34.0
-virtualenv==20.26.6
+uvloop==0.21.0
+watchfiles==1.0.4
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
 websockets==14.2
-Werkzeug==3.0.4
+Werkzeug==3.1.3
+widgetsnbextension==4.0.13
+wrapt==1.17.2
 yarl==1.18.3
+zipp==3.21.0
 zstandard==0.23.0
