--- a/voice-bot/requirements.txt
+++ b/voice-bot/requirements.txt
@@ -18,6 +18,7 @@ babel==2.17.0
 backoff==2.2.1
 bcrypt==4.2.1
 beautifulsoup4==4.13.3
+bidict==0.23.1
 bleach==6.2.0
 blinker==1.9.0
 build==1.2.2.post1
@@ -45,6 +46,7 @@ fastjsonschema==2.21.1
 filelock==3.17.0
 Flask==3.1.0
 Flask-Cors==5.0.0
+Flask-SocketIO==5.5.1
 flatbuffers==25.2.10
 fqdn==1.5.1
 frozenlist==1.5.0
@@ -324,7 +326,9 @@ PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-engineio==4.11.2
 python-json-logger==3.2.1
+python-socketio==5.12.1
 pyttsx3==2.98
 pytz==2025.1
 PyYAML==6.0.2
@@ -345,6 +349,7 @@ scipy==1.15.1
 Send2Trash==1.8.3
 sentence-transformers==3.4.1
 shellingham==1.5.4
+simple-websocket==1.1.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -390,6 +395,7 @@ websockets==14.2
 Werkzeug==3.1.3
 widgetsnbextension==4.0.13
 wrapt==1.17.2
+wsproto==1.2.0
 yarl==1.18.3
 zipp==3.21.0
 zstandard==0.23.0
